--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 html {
     scrollbar-width: none;
+    font-family: sans-serif;
 }
 .top_saction {
     background-color: #EEEFF1;
@@ -55,202 +56,89 @@ html {
     width: 150px;
 }
 .aboutme_conteiner {
-    margin-top: 540px;
-    margin-left: 730px;
+    width: 1920px;
+    margin-top: 150px;
+    
     text-align: center;
     display: inline-block;
     
+    
 }
 .aboutme_conteiner h2 {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     font-size: 25px;
     
 }
 .aboutme_conteiner p {
-    
+    padding-left: 37%;
     height: 50px;
     width: 500px;
+    
 }
-/* numbers__item */
-
-position: absolute;
-width: 141px;
-height: 50px;
-left: 1355px;
-top: 1159px;
-
-
-
-/* Group */
-
-position: absolute;
-width: 71px;
-height: 44px;
-left: 1425px;
-top: 1162px;
-
-
-
-/* 40+ */
-
-position: absolute;
-width: 36px;
-height: 19px;
-left: 1425px;
-top: 1162px;
-
-/* h3 */
-font-family: 'Roboto';
-font-style: normal;
-font-size: 21px;
-line-height: 25px;
-
-color: #FFFFFF;
-
-
-
-/* projects */
-
-position: absolute;
-width: 71px;
-height: 15px;
-left: 1425px;
-top: 1191px;
-
-/* p */
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 26px;
-
-color: #FFFFFF;
-
-
-
-/* project */
-
-position: absolute;
-width: 50px;
-height: 50px;
-left: 1355px;
-top: 1159px;
-
-
-
-/* Group */
-
-position: absolute;
-left: 0%;
-right: 0%;
-top: 0%;
-bottom: 0%;
-
-
-
-/* Group */
-
-position: absolute;
-left: 0%;
-right: 0%;
-top: 0%;
-bottom: 0%;
-
-
-
-/* Group */
-
-position: absolute;
-left: 0%;
-right: 0%;
-top: 0%;
-bottom: 0%;
-
-
-
-/* Vector */
-
-position: absolute;
-left: 6.67%;
-right: 0%;
-top: 0%;
-bottom: 0%;
-
-background: #FFFFFF;
-
-
-/* Vector */
-
-position: absolute;
-left: 0%;
-right: 36.67%;
-top: 30%;
-bottom: 53.33%;
-
-background: #FFFFFF;
-
-
-/* Vector */
-
-position: absolute;
-left: 36.67%;
-right: 10%;
-top: 18.33%;
-bottom: 28.33%;
-
-background: #FFFFFF;
-
-
-/* Vector */
-
-position: absolute;
-left: 60.81%;
-right: 20%;
-top: 42.48%;
-bottom: 38.33%;
-
-background: #FFFFFF;
-
-
-/* Vector */
-
-position: absolute;
-left: 43.33%;
-right: 23.33%;
-top: 10%;
-bottom: 86.67%;
-
-background: #FFFFFF;
-
-
-/* Vector */
-
-position: absolute;
-left: 38.33%;
-right: 18.33%;
-top: 16.67%;
-bottom: 80%;
-
-background: #FFFFFF;
-
-
-/* Vector */
-
-position: absolute;
-left: 28.33%;
-right: 61.67%;
-top: 51.67%;
-bottom: 45%;
-
-background: #FFFFFF;
-
-
-/* Vector */
-
-position: absolute;
-left: 28.33%;
-right: 65%;
-top: 58.33%;
-bottom: 38.33%;
-
-background: #FFFFFF;
+.img_section {
+    margin-top: 100px;
+    background-color: #34547A ;
+    width: 1920px;
+    height: 250px;
+    text-align: center;
+    
+}
+.card {
+    margin-top: 70px;
+    display: inline-block;
+    margin-right: 40px;
+}
+.floatted-imge{
+    width: 60px;
+    height: 50px;
+    object-fit: contain;
+    float: left;
+
+}
+.text-float {
+    float: left;
+    padding-top: 13px;
+    padding-left: 10px;
+}
+.text-float h2 {
+    text-align: left;
+    font-size: larger;
+}
+.video_section {
+    background-color: #EEEFF1;
+    width: 1920px;
+    height: 1004px;
+}
+.video_conteiner {
+    width: 1920px;
+    display: inline-block;
+    text-align: center;
+}
+.video_conteiner h3 {
+    font-size: 25px;
+    margin-top: 40px;
+}
+.video_conteiner p {
+    padding-left: 37%;
+    padding-top: 40px;
+    padding-bottom: 60px;
+    width: 530px;
+}
+.footer {
+    background-color: #34547A;
+    width: 1920px;
+    height: 151px;
+}
+.footer-conteiner h4 {
+    color: white;
+    font-size: 20px;
+    padding-left: 410px;
+    padding-top: 40px;
+    margin-bottom: 15px;
+}
+.footer-conteiner p {
+    color: white;
+    font-size: 15px;
+    padding-left: 410px;
+    margin-bottom: 20px;
+}
