--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,8 +45,10 @@ html {
     border: none;
     color: white;
     font-size: 16px;
-    width: 225px;
-    height: 65px;
+    padding-left: 65px;
+    padding-right: 65px;
+    padding-top: 21px;
+    padding-bottom: 21px;
 }
 .about-me-section {
     padding-top: 112px;
