--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,11 +5,15 @@ html{
     height: 1px;
     background-color: gray;
 }
-.nav-section {
-    
-    border-color: gray;
-    background-color: #FFFFFF;
+header {
     min-height: 95px;
+}
+header img {
+    height: 28px;
+    width: 130px;
+    margin-top: 16px;
+    padding: 10px 15px 10px 15px;
+    margin-right: 32px;
 }
 .navigator {
     display: flex;
@@ -22,37 +26,34 @@ html{
 }
 .navigator li {
     display: inline-block;
-    font-size: 35px;
+    font-size: 15px ;
     margin-right: 20px ;
-    margin-top: 22px ;
+    margin-top: 32px ;
+    line-height: 20px;
 
 }
 .img-and-nav{
     display: flex;
     justify-content: start;
 }
-.img-and-nav img {
-    padding: 10px 15px 10px 15px;
-    margin-right: 20px;
+.btn {
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
 }
-.Log-in-button {
-    font-size: 25px;
-    padding-left: 35px;
-    padding-right: 35px;
+.btn-white {
+    background-color: white;
+    padding-left: 36px;
+    padding-right: 36px;
     margin-top: 22px;
     margin-right: 15px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-width: 0.5px;
-    cursor: pointer;
+    
 }
-.Log-in-button:hover {
-    background-color: #FF6336;
-    color: white;
-    border: none;
-}
-.try-it-button {
-    font-size: 25px;
+
+.btn-orange {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 23px;
@@ -69,8 +70,8 @@ html{
     margin: 0 auto;
 }
 .info-section {
-    margin-top: 150px;
-    margin-bottom: 170px;
+    padding-top: 150px;
+    padding-bottom: 170px;
 }
 .info-div {
     display: flex;
@@ -78,7 +79,6 @@ html{
 
 }
 .text-in-info h1 {
-    margin-top: 30px;
     font-size: 65px;
     font-weight: 600;
     margin-bottom: 60px;
@@ -93,21 +93,19 @@ html{
 .buttons-div {
     margin-bottom: 20px;
 }
-.button1 {
-    font-size: 16px;
-    font-weight: 600;
-    padding: 16px 42px 16px 42px;
+.btn-big-orange {
+    
+    padding: 18px 42px 18px 42px;
     border: none;
     color: white;
     background-color: #FF6336;
-    cursor: pointer;
     margin-right: 10px;
     
 }
-.button2 {
+.btn-big-white {
     font-size: 16px;
     font-weight: 600;
-    padding: 15px 29px 15px 29px;
+    padding: 18px 29px 18px 29px;
     cursor: pointer;
 }
 .p2 {
@@ -210,19 +208,21 @@ html{
 }
 .card-png {
     display: flex;
-    justify-content: center;
     width: 160px;
     height: 120px;
-    padding-left: 85px;
+    
     margin-bottom: 20px;
 }
 .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 330px;
     height: 294px;
-    margin-right: 50px;
+    padding: 0 25px 0 25px;
 }
 .card h5 {
-    text-align: center;
     font-size: 25px;
     font-weight: 600;
     margin-bottom: 20px;
@@ -235,11 +235,14 @@ html{
     display: flex;
     justify-content: center;
     align-items:center;
+    flex-wrap: wrap;
 }
-.one-more-section h6 {
+.localization-team-section {
+    padding-top: 150px;
+}
+.localization-team-section h6 {
     font-size: 50px;
     font-weight: 600 ;
-    margin-top: 154px;
     margin-bottom: 100px;
 }
 .card2 {
@@ -262,7 +265,7 @@ html{
     color: black;
     font-size: 20px;
 }
-.one-more-pod-conteiner {
+.localization-team-pod-conteiner {
     display: flex;
     justify-content: left;
 }
@@ -337,45 +340,47 @@ html{
     text-align: center;
     margin-bottom: 50px;
 }
-.pod-bird-conteiner button {
+.pod-bird-conteiner img {
+    width: 1023px; 
+    height: 445px;
+}
+.bird-btn {
     padding: 20px 40px 20px 40px;
-    font-size: 16px;
     color: white;
     background-color: #FF6336;
     border: none;
     margin-top: 40px;
-    margin-bottom: 150px;
-    cursor: pointer;
 }
-.skoro-konec-section {
+.btn-black-section {
+    margin-top: 150px;
     background-color: #FF9C7D;
     min-height: 603px;
 }
-.skoro-konec-conteiner {
+.btn-black-conteiner {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.skoro-konec-conteiner h2 {
+.btn-black-conteiner h2 {
     margin-top: 150px;
     font-size: 65px;
     font-weight: 600;
     text-align: center;
     margin-bottom: 50px;
 }
-.skoro-konec-conteiner p {
+.btn-black-conteiner p {
     font-size: 20px;
     margin-bottom: 100px;
 }
-.skoro-konec-conteiner button {
+.btn-black {
     padding: 20px 40px 20px 40px;
     border: none;
     background-color: black;
     color: white;
     font-size: 17px;
 }
-.nu-wot-wot-konec-section {
+footer {
     min-height: 600px;
 }
 .velik-conteiner {
@@ -402,7 +407,11 @@ html{
     margin-top: 120px;
     
 }
-.ul-div p {
+.ul-div a {
+    text-decoration: none;
+    color: black;
+}
+.ul-div h3 {
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 10px;
@@ -426,6 +435,6 @@ html{
    
 }
 .last-section {
-    margin-top: 40px;
+    padding-top: 60px;
     margin-bottom: 20px;
 }
